--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,11 @@
 # @see https://www.prisma.io/docs/reference/database-reference/connection-urls
 DATABASE_URL=file:./db.sqlite
 
-# @see https://next-auth.js.org/configuration/options#nextauth_url
-NEXTAUTH_URL=http://localhost:3000
-
-# You can generate the secret via 'openssl rand -base64 32' on Unix
-# @see https://next-auth.js.org/configuration/options#secret
-NEXTAUTH_SECRET=supersecret
-
 # Preconfigured Discord OAuth provider, works out-of-the-box
 # @see https://next-auth.js.org/providers/discord
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+NEXT_PUBLIC_APP_DOMAIN=
+
+NEXT_PUBLIC_WEB3AUTH_CLIENT_ID=
