--- a/turbo.json
+++ b/turbo.json
@@ -31,10 +31,10 @@
   },
   "globalEnv": [
     "DATABASE_URL",
-    "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL",
     "NODE_ENV",
     "DISCORD_CLIENT_ID",
-    "DISCORD_CLIENT_SECRET"
+    "DISCORD_CLIENT_SECRET",
+    "NEXT_PUBLIC_APP_DOMAIN",
+    "NEXT_PUBLIC_WEB3AUTH_CLIENT_ID"
   ]
 }
