feat: add thirdweb provider & example rpc class

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,21 +15,23 @@
     "@acme/api": "*",
     "@acme/tailwind-config": "*",
     "@tanstack/react-query": "^4.23.0",
+    "@thirdweb-dev/react": "^3.9.4",
+    "@thirdweb-dev/sdk": "^3.9.4",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@walletconnect/client": "^1.8.0",
+    "@web3auth/base": "^4.6.0",
+    "@web3auth/core": "^4.6.0",
+    "@web3auth/modal": "^4.6.2",
+    "@web3auth/openlogin-adapter": "^4.6.0",
+    "ethers": "^5.7.2",
+    "firebase": "^9.17.1",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.20.2",
-    "ethers": "^5.7.2",
-    "@walletconnect/client": "^1.8.0",
-    "@web3auth/core": "^4.6.0",
-    "@web3auth/base": "^4.6.0",
-    "@web3auth/modal": "^4.6.2",
-    "@web3auth/openlogin-adapter": "^4.6.0",
-    "firebase": "^9.17.1"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
